ch(github): action fix for cloudflare deploy

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,9 +10,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     name: Deploy
-    defaults:
-      run:
-        working-directory: ./crypto-sentiment-dashboard
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,9 +23,11 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ./crypto-sentiment-dashboard
 
       - name: Build application
         run: npm run build
+        working-directory: ./crypto-sentiment-dashboard
 
       - name: Deploy to Cloudflare Workers
         uses: cloudflare/wrangler-action@v3
@@ -36,3 +35,4 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           workingDirectory: './crypto-sentiment-dashboard'
+          command: deploy
