--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,13 +3,14 @@ name: Deploy to Cloudflare Workers
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     name: Deploy
+    defaults:
+      run:
+        working-directory: crypto-sentiment-dashboard
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -19,20 +20,15 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: './crypto-sentiment-dashboard/package-lock.json'
+          cache-dependency-path: 'crypto-sentiment-dashboard/package-lock.json'
 
       - name: Install dependencies
         run: npm ci
-        working-directory: ./crypto-sentiment-dashboard
 
       - name: Build application
         run: npm run build
-        working-directory: ./crypto-sentiment-dashboard
 
       - name: Deploy to Cloudflare Workers
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          workingDirectory: 'crypto-sentiment-dashboard'
-          command: deploy
+        run: npx wrangler deploy
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
