--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,3 +32,4 @@ jobs:
         run: npx wrangler deploy api/index.js --name crypto-sentiment-dashboard --assets ./dist --compatibility-date 2025-06-05
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
