--- a/crypto-sentiment-dashboard/package.json
+++ b/crypto-sentiment-dashboard/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:api": "npm run build && npx wrangler dev",
+    "dev:all": "concurrently \"npm run dev\" \"npm run dev:api\"",
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "wrangler deploy"
